style: Solved the problem where the scale on the spider-man image created an overflow on the window

--- a/css/partials/_menu.scss
+++ b/css/partials/_menu.scss
@@ -29,13 +29,16 @@ header{
     
     li{
         margin-left: 24px;
+        
+        &:last-child > a{
+            color: $red;
+        }
     }
 
     @include responsive(){
         display: none;
     }
 }
-
 .nav-link{
     display: inline-block;
     padding: 8px 16px;
