--- a/css/style.scss
+++ b/css/style.scss
@@ -7,7 +7,7 @@
 
 
 @mixin responsive(){
-    @media screen and (min-width: 960px){
+    @media screen and (max-width: 960px){
         @content;
     }
 }
@@ -24,6 +24,7 @@ body{
     width: 100%;
     height: 100vh;
     background-color: $blue-dark;
+    overflow: hidden;
 }
 
 svg, img{
